# ShuffleByBulletproofs

./: .gitignore  Readme.md  analyze.py  bulletproofs_batch_test.py  client.py  performance_test.py  performance_test2.py  rappor.py  server.py  shuffler copy.py  shuffler.py  verifiable_shuffler copy.py  verifiable_shuffler.py
Browser/: aggregator.py  candidates.txt  cms_ldp.py  encoded_history.txt  encoded_history_dummy.txt  generate_dummy_history.py  history copy.txt  history.txt  history_dummy.txt  simple_browser.py  simple_browser_v2.py  simple_browser_v3.py  simple_browser_v4.py  simple_browser_v5.diff  simple_browser_v5.md  simple_browser_v5.py
_reports/: mapping.csv  params.csv  reports.csv  results.csv
_results/: bulletproofs_batch_results.json  zkp_performance_results.json  考察.md  考察slide.md
_shuffle_logs/: shuffle_proof_2025-04-01T21-11-53.537060.json  shuffle_proof_2025-04-01T21-13-23.538121.json
rust_verifier/: Cargo.toml  Cargo_0423.toml  Readme.md  TEST.md  client0.py  counts2.json  input.json  input_reports.json  shuffle_input.json  slide2-0.md  verification_input.json  差分プライバシーを用いたChromiumベースの統計レポート収集システムの実装に関する研究.md
rust_verifier/crates/cli/: Cargo.toml
rust_verifier/crates/cli/src/: main.rs
rust_verifier/crates/histogram_zkp/: Cargo.toml
rust_verifier/crates/histogram_zkp/src/: lib.rs
rust_verifier/other/: client0.py.md  slide.md  slide2-x.md  slide2.md
rust_verifier/src/: Permutation.rs  main copy.rs  main.rs  main0402.rs  main0423.rs  run_all.rs  setup.rs
rust_verifier2/: Cargo.toml
rust_verifier2/benches/: shuffle_bench.rs
rust_verifier2/src/: lib.rs  main.rs
slide/: CMS＋LDP.md  CMS＋LDP_Ex.md  CMS＋LDPeasy.md  URL推定.md  slide.md  slide_証明手法.md  slideex.md  シャッフル証明.md  シャッフル証明0502.md  テスト.md  ベンチマーク.md  ベンチマークmemo.md  考察slide.md
slide/.obsidian/: workspace.json
slide/0504/: CMS＋LDP copy.md  CMS＋LDP slide.md  CMS＋LDP.md  LDPp=0.5, q=0.75.md  cms_ldp_presentation.pptx  rawdata.md  (+1 more)
(+32 files in other folders)
