[package]
name = "rust_verifier2"
version = "0.1.0"
edition = "2021"

[dependencies]
bulletproofs = "5.0.0"
merlin               = "3.0"    # Fiat–Shamir トランスクリプト :contentReference[oaicite:3]{index=3}
curve25519-dalek = "4.1.3"
rand                 = "0.8"    # 乱数生成 :contentReference[oaicite:5]{index=5}
serde                = { version = "1.0", features = ["derive"] }  # Serialize/Deserialize :contentReference[oaicite:6]{index=6}
serde_json           = "1.0"    # JSON 入出力 :contentReference[oaicite:7]{index=7}
blake3               = "1.3"    # ハッシュ :contentReference[oaicite:8]{index=8}
hex                  = "0.4"    # 16進エンコード／デコード :contentReference[oaicite:9]{index=9}

[dev-dependencies]
criterion            = "0.4"    # ベンチマーク用 :contentReference[oaicite:10]{index=10}
