[package]
name = "zkp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
commitment      = { path = "../commitment" }
histogram_zkp   = { path = "../histogram_zkp" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rand            = "0.8"
hex             = "0.4"
