[package]
name = "histogram_zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec            = { version = "0.4.0", default-features = false }
ark-ff            = { version = "0.4.0", default-features = false }
ark-poly          = { version = "0.4.0", default-features = false }
ark-poly-commit   = { version = "0.4.0", default-features = false }
ark-serialize     = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-std           = { version = "0.4.0", default-features = false }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
hex               = "0.4"
anyhow            = "1.0"
